tests/invalid_code/duplicate_symbols.bs
enum MyEnum {
    a
}
enum MyEnum {
    a
}

mod MyMod {}
enum MyMod {
    a
}

class MyClass { }
enum MyClass {
    a
}

const YEP = 1
const YEP = 1

var super = 0
var super = 0

fn main() {}
fn main(arg: bool, arg: bool) {
    var x = 0
    var x = 0
}
